# wEditor

./: .gitignore  CMakeLists.txt  MainFrame.cpp  Makefile  README.md  main.cpp
Functions/: DragNDrop.cpp  MainFrame.h  ThemeSettings.cpp  ThemeSettings.h
Preferences/: Preferences.cpp  Preferences.h
SyntaxHighlighter/: SyntaxHighlightAssembly.cpp  SyntaxHighlightC.cpp  SyntaxHighlightCPP.cpp  SyntaxHighlightCSharp.cpp  SyntaxHighlightCSharp.h  SyntaxHighlightJava.cpp  SyntaxHighlightPython.cpp  SyntaxHighlightSQL.cpp  SyntaxHighlightSQL.h  SyntaxHighlighter.cpp  Text.cpp
include/weditor/: EmbeddedIcons.h  MainFrame.h  Preferences.h  ThemeSettings.h
include/weditor/SyntaxHighlighter/: SyntaxHighlightBash.h  SyntaxHighlightBatch.h  SyntaxHighlightJavaScript.h  SyntaxHighlightSQL.h
src/: DragNDrop.cpp  MainFrame.cpp  Preferences.cpp  ThemeSettings.cpp
src/SyntaxHighlighter/: SyntaxHighlightAssembly.cpp  SyntaxHighlightBash.cpp  SyntaxHighlightBatch.cpp  SyntaxHighlightC.cpp  SyntaxHighlightCPP.cpp  SyntaxHighlightCSharp.cpp  SyntaxHighlightJava.cpp  SyntaxHighlightJavaScript.cpp  SyntaxHighlightPython.cpp  SyntaxHighlightSQL.cpp  SyntaxHighlighter.cpp  Text.cpp
